# neru-no-toki

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  run.sh
data/: ALMA_DEL.XM  DISCO.XM  EXEL.XM  KAOSSONG.MOD  ZINZIN.XM
data/nnt/: BACKUP.XM  CADRBOIS.PCX  CH_DECAL.PCX  CH_PAYSA.PCX  CH_SALE.PCX  CH_TEXTE.PCX  FX2D.PCX  GS_GS.PCX  KAT_ANIM.PCX  KAT_FOND.PCX  KAT_META.PCX  LIGHT1.PCX  LIGHT2.PCX  LOGO.PCX  NNT_BRUI.PCX  NNT_CONN.PCX  NNT_HAIN.PCX  NNT_POLL.PCX  NNT_STRE.PCX  NNT_TEXT.PCX  PLASTIC.PCX  POEME.PCX  POEME2.PCX  POEME3.PCX  RAY_FOND.PCX  RAY_MAP1.PCX  RAY_TEXT.PCX  SOL1.PCX  SOL2.PCX  TEXTURE1.PCX  TRANSIT1.PCX
include/: demo_framework.h
original/: MAK.BAT  MAKE.LNK  MAKING.OF  NNT.CPP  README.md  ZIK.BAT
original/include/: COMMON.H  INTERPOL.H  NNT.H  NNTVAR.H  RAYCAST.H
src/: 01_flames.c  02_fraktal.c  03_chaos.c  04_starfly.c  05_shadebob.c  06_tunnel.c  07_pixelreb.c  08_wobbler.c  09_sinewave.c  10_plasma.c  11_voxel.c  12_particles.c  13_rotozoom.c  14_w3d.c  15_rat.c  16_nnt.c
